--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
 style="margin: 0 10px;">
   
  <!-- تأجير طاولات وكراسي -->
-  <section id="samaat" class="service">
-    <h2>تأجير طاولات وكراسي تأجير طاولات</h2>
-     <div class="images-container">
+  <section id="tables-chairs" class="service">
+    <h2>تأجير طاولات وكراسي</h2>
+    <div class="images-container">
      <img src="https://i.postimg.cc/3JRnTVQb/IMG-2570.jpg" />
-    <img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
+<img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
 <img src="https://i.postimg.cc/HnMdNG7N/a3da0885-6e56-4917-bd17-bb29fc8cff48.jpg" alt="" />
 <img src="https://i.postimg.cc/3xYYtcrL/5d2996fe-3a2d-4b69-8f7d-7214dbde9612.jpg" alt="" />
 <img src="https://i.postimg.cc/cLYsFDCr/44088596-8611-45ce-a56f-0df447a7c9ca.jpg" alt="" />
