--- a/index.html
+++ b/index.html
@@ -368,6 +368,8 @@ style="margin: 0 10px;">
 ايجار طاولات وكراسي حفلات  
 خصم 30% علي تأجير زل وكراسي حفلات
     </p>
+  </section>
+  
  <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
