--- a/index.html
+++ b/index.html
@@ -316,7 +316,20 @@
 اختيار الخدمة المثلى: اجعل التخطيط ممتعًا
 
 لا تنس أيضًا أهمية التخطيط المسبق. قم بحجز ما تحتاجه بمقدمة الوقت لتضمن توافر العناصر التي تحتاجها. كذلك، تذكر دائمًا أن تبحث عن الخدمة المحلية التي تلبي احتياجاتك بدقة.
-
+تاجير كوش 
+كوش 
+كوش افراح 
+تاجير كوش افراح 
+كوش الرياض
+كوش جدة
+كوش الدمام
+كوش الدمام
+تاجير كوش الدمام
+تاجير كوش الخبر
+تاجير كوش الرياض
+تاجير كوش جدة 
+كوش للايجار
+كوش للتاجير
  تاجير كراسي وطاولات هو استثمار ذكي يمكن أن يحول مناسبتك إلى تجربة استثنائية. اختر العناصر التي تتناسب مع رؤيتك وميزانيتك واجعل مناسبتك القادمة لا تُنسى.
 نحن لمسات نقدم خيارات متنوعة تاجير طاولات وكراسي ، بدءًا من الطاولات العادية وحتى جلسات الشعبية وكنب المريح. سواء كنت تخطط لحفل زفاف، مناسبة اجتماعية، معرض تجاري أو أي حدث آخر، نحن هنا لنلبي احتياجاتك بأسلوب احترافي وجودة عالية.
 
@@ -345,7 +358,20 @@
 إذا كنت تبحث عن تاجير طاولات وكراسي حفلات مميزة ومنسقة بشكل جيد، فنحن هنا لتقديم الدعم. نحن نقدم لك خيارات متعددة تتضمن طاولات بوفيه وطعام تلبي احتياجات مختلفة. كما نقدم تأجير جلسات شعبية وكنب توفيرًا للراحة لضيوفك.
 
 وإذا كنت تبحث عن عروض مميزة، فنحن نقدم خصم 30% على تأجير زل وكراسي حفلات، لتحصل على أفضل الخدمات بأسعار مناسبة.
-
+تاجير كوش 
+كوش 
+كوش افراح 
+تاجير كوش افراح 
+كوش الرياض
+كوش جدة
+كوش الدمام
+كوش الدمام
+تاجير كوش الدمام
+تاجير كوش الخبر
+تاجير كوش الرياض
+تاجير كوش جدة 
+كوش للايجار
+كوش للتاجير
 
 تاجير طاولات بالدمام 
 تأجير  زل وجلسات 
@@ -465,6 +491,20 @@
 تاجير كنب الشرقية 
 كنب للتأجير 
 كنب للايجار 
+تاجير كوش 
+كوش 
+كوش افراح 
+تاجير كوش افراح 
+كوش الرياض
+كوش جدة
+كوش الدمام
+كوش الدمام
+تاجير كوش الدمام
+تاجير كوش الخبر
+تاجير كوش الرياض
+تاجير كوش جدة 
+كوش للايجار
+كوش للتاجير
 كنب 
 كنبات 
 كنب الرياض 
@@ -501,6 +541,20 @@
 تاجير كنب ثلاثي 
 تاجير كنب مفرد 
 تاجير كنب مخمل 
+تاجير كوش 
+كوش 
+كوش افراح 
+تاجير كوش افراح 
+كوش الرياض
+كوش جدة
+كوش الدمام
+كوش الدمام
+تاجير كوش الدمام
+تاجير كوش الخبر
+تاجير كوش الرياض
+تاجير كوش جدة 
+كوش للايجار
+كوش للتاجير
 تاجير كنبات 
 تاجير كنب الرياض 
 تاجير كنب الدمام 
@@ -555,7 +609,21 @@
     <h2>تأجير مكبرات صوت وسماعات دي جي بأحدث التقنيات</h2>
     
       نقدم خدمة تأجير مكبرات صوت حديثة ومكبرات دي جي عالية الجودة بأفضل الأسعار.  
-      مناسبة لجميع الحفلات، الأعراس، المناسبات الكبيرة، والتجمعات.تاجير سماعات 
+    تاجير كوش 
+كوش 
+كوش افراح 
+تاجير كوش افراح 
+كوش الرياض
+كوش جدة
+كوش الدمام
+كوش الدمام
+تاجير كوش الدمام
+تاجير كوش الخبر
+تاجير كوش الرياض
+تاجير كوش جدة 
+كوش للايجار
+كوش للتاجير
+    مناسبة لجميع الحفلات، الأعراس، المناسبات الكبيرة، والتجمعات.تاجير سماعات 
 تاجير سماعات الدمام 
 تاجير سماعات الرياض 
 تايجر سماعات جدة 
@@ -653,7 +721,20 @@
 تاجير مكيفات صحراوي 
 مكيفات للإيجار 
 مكيفات 
-
+تاجير كوش 
+كوش 
+كوش افراح 
+تاجير كوش افراح 
+كوش الرياض
+كوش جدة
+كوش الدمام
+كوش الدمام
+تاجير كوش الدمام
+تاجير كوش الخبر
+تاجير كوش الرياض
+تاجير كوش جدة 
+كوش للايجار
+كوش للتاجير
 تاجير دفايات الرياض 
 تاجير دفايات الدمام 
 تاجير دفايات الخبر 
@@ -689,6 +770,20 @@
 لدينا افضل سماعات للايجار
 تاجير سماعات الخبر 
 ايجار سماعات مناسبات بالخبر
+تاجير كوش 
+كوش 
+كوش افراح 
+تاجير كوش افراح 
+كوش الرياض
+كوش جدة
+كوش الدمام
+كوش الدمام
+تاجير كوش الدمام
+تاجير كوش الخبر
+تاجير كوش الرياض
+تاجير كوش جدة 
+كوش للايجار
+كوش للتاجير
 سماعات اجار 
 تاجير سماعة
 سماعات للايجار الدمام 
@@ -1113,6 +1208,23 @@
     <img src="https://i.postimg.cc/2S2pXXZ1/IMG-20250704-WA0028.webp" alt="صورة 2" />
     <img src="https://i.postimg.cc/3NgVjLhJ/IMG-20250804-WA0017.webp" alt="صورة 3" />
     <img src="https://i.postimg.cc/SR71YJLn/IMG-20250326-WA0021.webp" alt="صورة 4" />
+    <img src="https://i.postimg.cc/0NDYyh0Q/4cc93a4e-f758-438c-a304-6fb631e6abd7.jpg" alt="تأجير مستلزمات الحفلات">
+    <img src="https://i.postimg.cc/rm95SWb2/IMG-3034.jpg" alt="تأجير كراسي وطاولات">
+    <img src="https://i.postimg.cc/6q5nzqJ2/60f2dedd-5c0b-4266-8952-2b59a1af5413.jpg" alt="تأجير كنب للمناسبات">
+    <img src="https://i.postimg.cc/pVqDrfzD/d02ebdeb-1571-4254-a4cf-38106b7d04af.jpg" alt="تأجير خيام وجلسات">
+    <img src="https://i.postimg.cc/BQzHcJhb/ffbb2ee4-bcf7-4d34-8aac-61c450160fda.jpg" alt="خدمة تنظيم حفلات">
+    <img src="https://i.postimg.cc/g26Rg15D/IMG-2899.jpg" alt="تجهيز المناسبات">
+    <img src="https://i.postimg.cc/Y9tWq0Sn/97aab430-e8d0-48bc-8d60-fd02d23ac75d.jpg" alt="تأجير سجاد وممرات">
+    <img src="https://i.postimg.cc/yNyD5KTF/IMG-2773.jpg" alt="تأجير مستلزمات الأعراس">
+    <img src="https://i.postimg.cc/Y2shTbQy/86cbdc69-021d-4387-bcb4-7b1d3367bd8f.jpg" alt="تأجير فرش ومفروشات">
+    <img src="https://i.postimg.cc/fTSJsmKW/ddc4ae75-fef8-4897-b7eb-a5b45bf24174.jpg" alt="تأجير إضاءة وصوت">
+    <img src="https://i.postimg.cc/13pXnS2L/ca588526-f9be-4873-a336-76ceefd183b8.jpg" alt="تأجير دي جي DJ">
+    <img src="https://i.postimg.cc/0QNyBwjs/9f587383-9f34-4b36-98af-9fe51af9230e.jpg" alt="تأجير حفلات">
+    <img src="https://i.postimg.cc/3Rbx5x0D/1c9b2679-e529-47cf-bd0f-859793abe3fc.jpg" alt="تجهيز حفلات خارجية">
+    <img src="https://i.postimg.cc/zvsDv2jz/IMG-2307.jpg" alt="تأجير خيام">
+    <img src="https://i.postimg.cc/YqFqZkrh/IMG-2308.jpg" alt="تأجير جلسات أرضية">
+    <img src="https://i.postimg.cc/y8zYz5xn/IMG-1634.jpg" alt="تأجير جلسات عربية">
+    <img src="https://i.postimg.cc/wBw6LjVb/3aa4f165-6d9f-4b07-96c4-72e5b61a385e.jpg" alt="تأجير مستلزمات المناسبات">
     <img src="https://i.postimg.cc/C5Ym0wyS/IMG-20250628-WA0025.webp" alt="صورة 5" />
     <img src="https://i.postimg.cc/PJ4Kr0hZ/IMG-20250628-WA0002.webp" alt="صورة 6" />
     <img src="https://i.postimg.cc/PrS2GGSn/IMG-20250804-WA0009.webp" alt="صورة 7" />
