--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
     />
   </a>
 </div>
+
+  <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
   
  <!-- تأجير طاولات وكراسي -->
   <section id="tables-chairs" class="service">
@@ -1196,47 +1205,7 @@
   }
 </style>
 
- <!-- معرض الصور -->
-<section id="gallery" class="service">
-  <h2>معرض الصور</h2>
-  <div class="gallery-container">
-   <!-- معرض الصور -->
-<section id="gallery" class="service">
-  <h2>معرض الصور</h2>
-  <div class="gallery-container">
-    <img src="https://i.postimg.cc/rmv2N0tg/IMG-20250830-WA0025.webp" alt="صورة 1" />
-    <img src="https://i.postimg.cc/2S2pXXZ1/IMG-20250704-WA0028.webp" alt="صورة 2" />
-    <img src="https://i.postimg.cc/3NgVjLhJ/IMG-20250804-WA0017.webp" alt="صورة 3" />
-    <img src="https://i.postimg.cc/SR71YJLn/IMG-20250326-WA0021.webp" alt="صورة 4" />
-    <img src="https://i.postimg.cc/0NDYyh0Q/4cc93a4e-f758-438c-a304-6fb631e6abd7.jpg" alt="تأجير مستلزمات الحفلات">
-    <img src="https://i.postimg.cc/rm95SWb2/IMG-3034.jpg" alt="تأجير كراسي وطاولات">
-    <img src="https://i.postimg.cc/6q5nzqJ2/60f2dedd-5c0b-4266-8952-2b59a1af5413.jpg" alt="تأجير كنب للمناسبات">
-    <img src="https://i.postimg.cc/pVqDrfzD/d02ebdeb-1571-4254-a4cf-38106b7d04af.jpg" alt="تأجير خيام وجلسات">
-    <img src="https://i.postimg.cc/BQzHcJhb/ffbb2ee4-bcf7-4d34-8aac-61c450160fda.jpg" alt="خدمة تنظيم حفلات">
-    <img src="https://i.postimg.cc/g26Rg15D/IMG-2899.jpg" alt="تجهيز المناسبات">
-    <img src="https://i.postimg.cc/Y9tWq0Sn/97aab430-e8d0-48bc-8d60-fd02d23ac75d.jpg" alt="تأجير سجاد وممرات">
-    <img src="https://i.postimg.cc/yNyD5KTF/IMG-2773.jpg" alt="تأجير مستلزمات الأعراس">
-    <img src="https://i.postimg.cc/Y2shTbQy/86cbdc69-021d-4387-bcb4-7b1d3367bd8f.jpg" alt="تأجير فرش ومفروشات">
-    <img src="https://i.postimg.cc/fTSJsmKW/ddc4ae75-fef8-4897-b7eb-a5b45bf24174.jpg" alt="تأجير إضاءة وصوت">
-    <img src="https://i.postimg.cc/13pXnS2L/ca588526-f9be-4873-a336-76ceefd183b8.jpg" alt="تأجير دي جي DJ">
-    <img src="https://i.postimg.cc/0QNyBwjs/9f587383-9f34-4b36-98af-9fe51af9230e.jpg" alt="تأجير حفلات">
-    <img src="https://i.postimg.cc/3Rbx5x0D/1c9b2679-e529-47cf-bd0f-859793abe3fc.jpg" alt="تجهيز حفلات خارجية">
-    <img src="https://i.postimg.cc/zvsDv2jz/IMG-2307.jpg" alt="تأجير خيام">
-    <img src="https://i.postimg.cc/YqFqZkrh/IMG-2308.jpg" alt="تأجير جلسات أرضية">
-    <img src="https://i.postimg.cc/y8zYz5xn/IMG-1634.jpg" alt="تأجير جلسات عربية">
-    <img src="https://i.postimg.cc/wBw6LjVb/3aa4f165-6d9f-4b07-96c4-72e5b61a385e.jpg" alt="تأجير مستلزمات المناسبات">
-    <img src="https://i.postimg.cc/C5Ym0wyS/IMG-20250628-WA0025.webp" alt="صورة 5" />
-    <img src="https://i.postimg.cc/PJ4Kr0hZ/IMG-20250628-WA0002.webp" alt="صورة 6" />
-    <img src="https://i.postimg.cc/PrS2GGSn/IMG-20250804-WA0009.webp" alt="صورة 7" />
-    <img src="https://i.postimg.cc/Cxt71Gyv/IMG-20250804-WA0007.webp" alt="صورة 8" />
-    <img src="https://i.postimg.cc/9f7pqDCc/IMG-20250804-WA0003.webp" alt="صورة 9" />
-    <img src="https://i.postimg.cc/qRcxjWNY/IMG-20250701-WA0001.webp" alt="صورة 10" />
-  </div>
-</section>
-
-  </div>
-</section>
-   
+ 
 </main>
 
 <footer>
