--- a/gallery.html
+++ b/gallery.html
@@ -1,107 +1,178 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>معرض الصور - حفلات ومناسبات</title>
-  <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      background: #fdfdfd;
-      margin: 0; padding: 20px;
-      text-align: center;
-    }
-    h1 {
-      margin-bottom: 20px;
-      color: #444;
-    }
-    .back-btn {
-      display: inline-block;
-      padding: 12px 25px;
-      margin: 15px 0;
-      background: #f4c542;
-      color: #222;
-      font-weight: bold;
-      border-radius: 30px;
-      text-decoration: none;
-      box-shadow: 0 0 10px #f4c54299;
-      transition: background 0.3s ease;
-    }
-    .back-btn:hover {
-      background: #d9af29;
-    }
-    .gallery-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
-      margin: 20px 0;
-    }
-    .gallery-container img {
-      width: 100%;
-      max-width: 350px;
-      border-radius: 10px;
-      object-fit: cover;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-    .gallery-container img:hover {
-      transform: scale(1.05);
-    }
-    .contact-buttons {
-      margin: 30px 0;
-    }
-    .contact-buttons a img {
-      width: 60px;
-      height: 60px;
-      margin: 0 10px;
-      transition: transform 0.3s ease;
-    }
-    .contact-buttons a:hover img {
-      transform: scale(1.2);
-    }
-    @media (max-width: 768px) {
-      .gallery-container { grid-template-columns: repeat(2, 1fr); }
-    }
-    @media (max-width: 480px) {
-      .gallery-container { grid-template-columns: 1fr; }
-    }
-  </style>
+<meta charset="UTF-8">
+<title>معرض صور تأجير الكنب والكراسي والجلسات</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+  }
+
+  /* زر الرجوع */
+  .back-home {
+    display: block;
+    width: 100%;
+    text-align: center;
+    background-color: #007BFF;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 15px 0;
+    font-size: 18px;
+    transition: 0.3s;
+  }
+  .back-home:hover {
+    background-color: #0056b3;
+  }
+
+  /* أزرار التواصل */
+  .contact-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin: 20px 0;
+  }
+  .contact-buttons a {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: #25D366; /* أخضر واتساب */
+    color: #fff;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  .contact-buttons a.call {
+    background-color: #28a745; /* أخضر اتصال */
+  }
+  .contact-buttons a:hover {
+    opacity: 0.8;
+  }
+
+  /* عنوان الأقسام */
+  h2 {
+    text-align: center;
+    margin-top: 40px;
+    color: #333;
+  }
+
+  /* معرض الصور */
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+    padding: 20px;
+  }
+  .gallery img {
+    width: 100%;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: 0.3s;
+  }
+  .gallery img:hover {
+    transform: scale(1.05);
+  }
+
+  /* Lightbox */
+  .lightbox {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    padding-top: 60px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.9);
+  }
+  .lightbox-content {
+    margin: auto;
+    display: block;
+    max-width: 90%;
+    max-height: 80%;
+  }
+  .close {
+    position: absolute;
+    top: 30px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+</style>
 </head>
 <body>
 
-  <h1>📸 معرض الصور</h1>
+<!-- زر رجوع للصفحة الرئيسية أول الصفحة -->
+<a href="index.html" class="back-home">الرجوع للصفحة الرئيسية</a>
 
-  <!-- زر رجوع فوق -->
-  <a href="index.html" class="back-btn">⬅ الرجوع للصفحة الرئيسية</a>
+<!-- أزرار التواصل فوق المعرض -->
+<div class="contact-buttons">
+  <a href="https://wa.me/966559534118" target="_blank">واتساب</a>
+  <a href="tel:0559534118" class="call">اتصال</a>
+</div>
 
-  <!-- أزرار تواصل -->
-  <div class="contact-buttons">
-    <a href="https://wa.me/966559534118" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="واتساب" />
-    </a>
-    <a href="tel:0559534118">
-      <img src="https://cdn-icons-png.flaticon.com/512/597/597177.png" alt="اتصال" />
-    </a>
-  </div>
+<!-- قسم صور الكنب -->
+<h2>صور كنب</h2>
+<div class="gallery">
+  <img src="https://i.postimg.cc/0NDYyh0Q/4cc93a4e-f758-438c-a304-6fb631e6abd7.jpg" alt="كنب1">
+  <img src="https://i.postimg.cc/rm95SWb2/IMG-3034.jpg" alt="كنب2">
+  <img src="https://i.postimg.cc/6q5nzqJ2/60f2dedd-5c0b-4266-895.jpg" alt="كنب3">
+  <img src="https://i.postimg.cc/XYZ/صورة4.jpg" alt="كنب4">
+</div>
 
-  <!-- شبكة الصور -->
-  <div class="gallery-container">
-    <img src="https://i.postimg.cc/rmv2N0tg/IMG-20250830-WA0025.webp" alt="صورة 1">
-    <img src="https://i.postimg.cc/2S2pXXZ1/IMG-20250704-WA0028.webp" alt="صورة 2">
-    <img src="https://i.postimg.cc/3NgVjLhJ/IMG-20250804-WA0017.webp" alt="صورة 3">
-    <img src="https://i.postimg.cc/SR71YJLn/IMG-20250326-WA0021.webp" alt="صورة 4">
-    <img src="https://i.postimg.cc/0NDYyh0Q/4cc93a4e-f758-438c-a304-6fb631e6abd7.jpg" alt="صورة 5">
-    <img src="https://i.postimg.cc/rm95SWb2/IMG-3034.jpg" alt="صورة 6">
-    <!-- زود صور زي ما تبغى بنفس الشكل -->
-  </div>
+<!-- قسم صور الكراسي -->
+<h2>صور كراسي</h2>
+<div class="gallery">
+  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
+  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
+  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
+  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+</div>
 
-  <!-- زر رجوع تحت -->
-  <a href="index.html" class="back-btn">⬅ الرجوع للصفحة الرئيسية</a>
+<!-- قسم صور الجلسات -->
+<h2>صور جلسات</h2>
+<div class="gallery">
+  <img src="https://i.postimg.cc/xyz1.jpg" alt="جلسة1">
+  <img src="https://i.postimg.cc/xyz2.jpg" alt="جلسة2">
+  <img src="https://i.postimg.cc/xyz3.jpg" alt="جلسة3">
+  <img src="https://i.postimg.cc/xyz4.jpg" alt="جلسة4">
+</div>
 
-  <footer>
-    <p>جميع الحقوق محفوظة © 2025 حفلات ومناسبات</p>
-  </footer>
+<!-- زر الرجوع للصفحة الرئيسية نهاية الصفحة -->
+<a href="index.html" class="back-home">الرجوع للصفحة الرئيسية</a>
+
+<!-- Lightbox -->
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-content" id="lightbox-img">
+</div>
+
+<script>
+  const gallery = document.querySelectorAll('.gallery img');
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+  const close = document.querySelector('.close');
+
+  gallery.forEach(img => {
+    img.addEventListener('click', () => {
+      lightbox.style.display = "block";
+      lightboxImg.src = img.src;
+    });
+  });
+
+  close.addEventListener('click', () => {
+    lightbox.style.display = "none";
+  });
+
+  lightbox.addEventListener('click', e => {
+    if(e.target !== lightboxImg) lightbox.style.display = "none";
+  });
+</script>
 
 </body>
 </html>
