--- a/index.html
+++ b/index.html
@@ -223,9 +223,6 @@
     <h2>تأجير طاولات وكراسي</h2>
     <div class="images-container">
 <img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
-<img src="https://i.postimg.cc/HnMdNG7N/a3da0885-6e56-4917-bd17-bb29fc8cff48.jpg" alt="" />
-<img src="https://i.postimg.cc/3xYYtcrL/5d2996fe-3a2d-4b69-8f7d-7214dbde9612.jpg" alt="" />
-<img src="https://i.postimg.cc/cLYsFDCr/44088596-8611-45ce-a56f-0df447a7c9ca.jpg" alt="" />
 <img src="https://i.postimg.cc/pX3WYN2w/78283085-0b43-4eef-8657-597e943879e6.jpg" alt="" />
 <img src="https://i.postimg.cc/B6Z4Q4gK/IMG-2375.jpg" alt="" />
     </div>
@@ -458,12 +455,17 @@
     <h2>تأجير كنب تاجير كنب ثلاثي بأفخم التصاميم</h2>
     <div class="images-container">
      <img src="https://i.postimg.cc/ZKbR0288/a3cfc92d-e51d-47c8-a4c5-02553e010ed6.jpg" />
-<img src="https://i.postimg.cc/8PzpTWGw/118ef08a-9091-42d7-8aaf-157ef8869f44.jpg" />
 <img src="https://i.postimg.cc/d0rv5jRQ/d82873e4-678a-45fd-bb2d-3df556fd435a.jpg" />
 <img src="https://i.postimg.cc/cHWW2tTR/e8b99023-9378-4d83-b72c-037487686cb2.jpg" />
-<img src="https://i.postimg.cc/Y0nwvn7R/eabbc148-5283-49fb-9bb6-c0bcf589d14b.jpg" />
-<img src="https://i.postimg.cc/1RJS7tFF/2946f5fb-cf0c-40bb-9f53-83083abc1b27.jpg" />
     </div>
+     <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
     <p class="content">
      تاجير كنب 
 تاجير كنب ثلاثي 
@@ -858,12 +860,14 @@
   <!-- تأجير خيام -->
   <section id="khiyam" class="service">
     <h2>تأجير خيام تاجير خيام أوروبية وخيام فخمة للمناسبات</h2>
-  <img src="https://i.postimg.cc/k59Tk4JW/f8ff48b2-e88d-4fdb-861a-839ccb2a71a6.jpg" />
-<img src="https://i.postimg.cc/ZKBsN2sv/IMG-1634.jpg" />
-<img src="https://i.postimg.cc/5th5VbFq/3aa4f165-6d9f-4b07-96c4-72e5b61a385e.jpg" />
-<img src="https://i.postimg.cc/NjRNJTcg/41dd72b0-a345-482e-a5f6-fd272ca25556.jpg" />
-<img src="https://i.postimg.cc/C1C8pD0S/55d1f413-4af2-4ec6-a883-f822a09e2ec4.jpg" />
-    </div>
+  <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
     <p class="content">
       نوفر في لمسات تأجير خيام أوروبية بتصاميم فخمة ومختلفة تناسب حفلات الزفاف والمناسبات الخاصة.  
       خيام ذات جودة عالية مقاومة للعوامل الجوية، مع خدمات تركيب وسرعة توصيل. إذا كنت تخطط لحفلة خاصة، فإننا نقدم تاجير خيام اوروبية المصممة بأناقة وجودة عالية لتلبية احتياجاتك ايجار خيام مكيفة للحفلات و للمناسبات
@@ -1035,12 +1039,14 @@
   <section id="jalsat" class="service">
     <h2>تأجير جلسات شعبية تاجير جلسات مغربية مرتفعة وأرضية</h2>
     <div class="images-container">
-    <img src="https://i.postimg.cc/fRhhJ9n6/fa730247-86f8-42e0-969e-57b5626231cc.jpg" />
-<img src="https://i.postimg.cc/CxHpDxwd/998c8831-eb3c-4359-8f69-f18802b2a1f5.jpg" />
-<img src="https://i.postimg.cc/59P6Zk30/b37e36f3-cb9c-4427-aba3-c5b6a5b7c17e.jpg" />
-<img src="https://i.postimg.cc/8cncMj5W/8a3757f2-aa5d-4dc3-8c65-eca198476bde.jpg" />
-<img src="https://i.postimg.cc/3wHRXMKL/IMG-2300.jpg" />
-    </div>
+  <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
     <p class="content">
       نقدم تأجير جلسات شعبية تاجير جلسات مغربية فاخرة، مرتفعة وأرضية، مناسبة لجميع الحفلات والمناسبات الخاصة.  
      
@@ -1139,10 +1145,14 @@
   <section id="dhiyafah" class="service">
     <h2>قهوجيين وصبابين ضيافة مميزة</h2>
     <div class="images-container">
-    <img src="https://i.postimg.cc/YCqhy9bL/ea91d0a2-b898-4d9e-b1c0-6d2f549e1971.jpg" alt="" />
-<img src="https://i.postimg.cc/4NXdmyC2/b2c3c4a1-ff8a-42eb-b610-da899af1a010.jpg" alt="" />
-<img src="https://i.postimg.cc/1tcSQ0zm/ddb194d9-6edd-4081-9704-ef51fccd4540.jpg" alt="" />
-    </div>
+    <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
     <p class="content">
       نوفر فريق قهوجيين وصبابين محترف لتقديم خدمات الضيافة المميزة في جميع المناسبات.  
       ضيافة تراثية وأصيلة تعزز من رقي حفلتك وتترك انطباعاً رائعاً لضيوفك. لا تشيل هم حفلاتك ومناسباتك نحن فى النيزك للحفلات نوفر قهوجيين وقهوجيات وصبابين خبره وتأجير كراسي وطاولات وزوالي حفلات ومناسبات وخيام استمتع بتجربة استئجار طاولات حفلات عالية الجودة نحن نوفر طاولات وكراسي حفلات ومناسبات للايجار، بالإضافة إلى تاجير كنب ولوازم حفلات متنوعة احجز طاولات وكراسي حفلات و مناسبات القادمة بسهولة وبأسعار مناسبه
