--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
 جلسات شعبية للإيجار      
 تأجير جلسات ارضيه
     </p>
-<div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
@@ -1180,8 +1180,8 @@
 قهوجييات 
 صبابات 
 ضيافه
-    </p>
-  <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+</p>
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
   <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
     <img 
@@ -1206,6 +1206,13 @@
 </div>
 
 <style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
   .contact-buttons a img {
     transition: transform 0.3s ease;
   }
