--- a/index.html
+++ b/index.html
@@ -223,9 +223,15 @@
     <h2>تأجير طاولات وكراسي</h2>
     <div class="images-container">
 <img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
-<img src="https://i.postimg.cc/pX3WYN2w/78283085-0b43-4eef-8657-597e943879e6.jpg" alt="" />
-<img src="https://i.postimg.cc/B6Z4Q4gK/IMG-2375.jpg" alt="" />
     </div>
+     <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
     <p class="content">
     استمتع بتجربة استئجار طاولات حفلات عالية الجودة. نحن نوفر طاولات وكراسي حفلات ومناسبات للايجار، بالإضافة إلى تاجير كنب ولوازم حفلات متنوعة. احجز طاولات وكراسي حفلات و مناسبات القادمة بسهولة وبأسعار مناسبة
 تواصل معنا الآن ايجار طاولات وكراسي الحفلات .تأجير كراسي ملكي 
@@ -618,6 +624,14 @@
   <section id="samaat" class="service">
     <h2>تأجير مكبرات صوت وسماعات دي جي بأحدث التقنيات</h2>
     
+    <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
       نقدم خدمة تأجير مكبرات صوت حديثة ومكبرات دي جي عالية الجودة بأفضل الأسعار.  
     تاجير كوش 
 كوش 
@@ -1220,7 +1234,14 @@
     transform: scale(1.2);
   }
 </style>
-
+ <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
  
 </main>
 
