--- a/gallery.html
+++ b/gallery.html
@@ -11,44 +11,48 @@
     padding: 0;
   }
 
-  /* زر الرجوع */
+  /* زر الرجوع كبير وعريض */
   .back-home {
     display: block;
     width: 100%;
     text-align: center;
-    background-color: #007BFF;
+    background-color: #FF5733; /* لون جذاب */
     color: #fff;
     font-weight: bold;
     text-decoration: none;
-    padding: 15px 0;
-    font-size: 18px;
+    padding: 20px 0;
+    font-size: 22px;
+    letter-spacing: 1px;
     transition: 0.3s;
   }
   .back-home:hover {
-    background-color: #0056b3;
+    background-color: #C7001E;
   }
 
-  /* أزرار التواصل */
+  /* أزرار التواصل كبيرة وواضحة */
   .contact-buttons {
     display: flex;
     justify-content: center;
-    gap: 15px;
-    margin: 20px 0;
+    gap: 20px;
+    margin: 25px 0;
   }
   .contact-buttons a {
     text-decoration: none;
-    padding: 10px 20px;
-    background-color: #25D366; /* أخضر واتساب */
-    color: #fff;
-    border-radius: 5px;
+    padding: 15px 35px;
+    font-size: 20px;
     font-weight: bold;
+    color: #fff;
+    border-radius: 8px;
     transition: 0.3s;
   }
+  .contact-buttons a.whatsapp {
+    background-color: #25D366; /* أخضر واتساب */
+  }
   .contact-buttons a.call {
-    background-color: #28a745; /* أخضر اتصال */
+    background-color: #1E8449; /* أخضر اتصال أغمق */
   }
   .contact-buttons a:hover {
-    opacity: 0.8;
+    opacity: 0.85;
   }
 
   /* عنوان الأقسام */
@@ -56,13 +60,14 @@
     text-align: center;
     margin-top: 40px;
     color: #333;
+    font-size: 24px;
   }
 
   /* معرض الصور */
   .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 12px;
     padding: 20px;
   }
   .gallery img {
@@ -99,7 +104,7 @@
     top: 30px;
     right: 35px;
     color: #fff;
-    font-size: 40px;
+    font-size: 45px;
     font-weight: bold;
     cursor: pointer;
   }
@@ -107,12 +112,12 @@
 </head>
 <body>
 
-<!-- زر رجوع للصفحة الرئيسية أول الصفحة -->
+<!-- زر رجوع أول الصفحة -->
 <a href="index.html" class="back-home">الرجوع للصفحة الرئيسية</a>
 
-<!-- أزرار التواصل فوق المعرض -->
+<!-- أزرار التواصل -->
 <div class="contact-buttons">
-  <a href="https://wa.me/966559534118" target="_blank">واتساب</a>
+  <a href="https://wa.me/966559534118" target="_blank" class="whatsapp">واتساب</a>
   <a href="tel:0559534118" class="call">اتصال</a>
 </div>
 
@@ -143,7 +148,7 @@
   <img src="https://i.postimg.cc/xyz4.jpg" alt="جلسة4">
 </div>
 
-<!-- زر الرجوع للصفحة الرئيسية نهاية الصفحة -->
+<!-- زر رجوع نهاية الصفحة -->
 <a href="index.html" class="back-home">الرجوع للصفحة الرئيسية</a>
 
 <!-- Lightbox -->
