--- a/gallery.html
+++ b/gallery.html
@@ -121,8 +121,8 @@
   <a href="tel:0559534118" class="call">اتصال</a>
 </div>
 
-<!-- قسم صور الكنب -->
-<h2>صور كنب</h2>
+<!-- قسم صور كوش الافراح ومداخل الاستقبال وطاولات الكوكتيل -->
+<h2>صور الكوش ومداخل الاستقبال وطاولات كوكتيل</h2>
 <div class="gallery">
   <img src="https://i.postimg.cc/0NDYyh0Q/4cc93a4e-f758-438c-a304-6fb631e6abd7.jpg" alt="كنب1">
   <img src="https://i.postimg.cc/rm95SWb2/IMG-3034.jpg" alt="كنب2">
@@ -130,8 +130,17 @@
   <img src="https://i.postimg.cc/XYZ/صورة4.jpg" alt="كنب4">
 </div>
 
-<!-- قسم صور الكراسي -->
-<h2>صور كراسي</h2>
+<!-- قسم صور الكنب -->
+<h2>صور كنب مفرد وثلاثي</h2>
+<div class="gallery">
+  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
+  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
+  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
+  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+</div>
+
+<!-- قسم صور طاولات وكراسي -->
+<h2>صور طاولات وكراسي</h2>
 <div class="gallery">
   <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
   <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
@@ -140,7 +149,34 @@
 </div>
 
 <!-- قسم صور الجلسات -->
-<h2>صور جلسات</h2>
+<h2>صور جلسات شعبية ومغربية</h2>
+<div class="gallery">
+  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
+  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
+  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
+  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+</div>
+
+<!-- قسم صور الخيام -->
+<h2>صور خيام</h2>
+<div class="gallery">
+  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
+  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
+  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
+  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+</div>
+
+<!-- قسم صور الحواجز والممرات والليزرات وشاشات العرض والسجاد -->
+<h2>صور حواجز وممرات وليزرات وشاشات وسجاد</h2>
+<div class="gallery">
+  <img src="https://i.postimg.cc/xyz1.jpg" alt="جلسة1">
+  <img src="https://i.postimg.cc/xyz2.jpg" alt="جلسة2">
+  <img src="https://i.postimg.cc/xyz3.jpg" alt="جلسة3">
+  <img src="https://i.postimg.cc/xyz4.jpg" alt="جلسة4">
+</div>
+  
+<!-- قسم صور الكراسي -->
+<h2>صور كراسي</h2>
 <div class="gallery">
   <img src="https://i.postimg.cc/xyz1.jpg" alt="جلسة1">
   <img src="https://i.postimg.cc/xyz2.jpg" alt="جلسة2">
