--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>معرض صور تأجير الكنب والكراسي والجلسات</title>
+<title>معرض صور خدماتنا</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -124,10 +124,27 @@
 <!-- قسم صور كوش الافراح ومداخل الاستقبال وطاولات الكوكتيل -->
 <h2>صور الكوش ومداخل الاستقبال وطاولات كوكتيل</h2>
 <div class="gallery">
-  <img src="https://i.postimg.cc/0NDYyh0Q/4cc93a4e-f758-438c-a304-6fb631e6abd7.jpg" alt="كنب1">
-  <img src="https://i.postimg.cc/rm95SWb2/IMG-3034.jpg" alt="كنب2">
-  <img src="https://i.postimg.cc/6q5nzqJ2/60f2dedd-5c0b-4266-895.jpg" alt="كنب3">
-  <img src="https://i.postimg.cc/XYZ/صورة4.jpg" alt="كنب4">
+ <img src="https://i.postimg.cc/d0QfxH0t/IMG-3066.jpg" alt="صورة 1">
+<img src="https://i.postimg.cc/W3hH2drB/IMG-3065.jpg" alt="صورة 2">
+<img src="https://i.postimg.cc/C1X6dwsz/IMG-3064.jpg" alt="صورة 3">
+<img src="https://i.postimg.cc/X7wD7SGY/IMG-3063.jpg" alt="صورة 4">
+<img src="https://i.postimg.cc/Jzx6ZNQw/IMG-3062.jpg" alt="صورة 5">
+<img src="https://i.postimg.cc/8CnZnT3t/IMG-3061.jpg" alt="صورة 6">
+<img src="https://i.postimg.cc/V6xDmDzt/IMG-3060.jpg" alt="صورة 7">
+<img src="https://i.postimg.cc/7YMmr3dC/IMG-3059.jpg" alt="صورة 8">
+<img src="https://i.postimg.cc/QMVb7Rt5/IMG-3058.jpg" alt="صورة 9">
+<img src="https://i.postimg.cc/26hnFmfq/IMG-3057.jpg" alt="صورة 10">
+<img src="https://i.postimg.cc/QdC5Yc3Z/IMG-3056.jpg" alt="صورة 11">
+<img src="https://i.postimg.cc/zG4LdM7T/IMG-3054.jpg" alt="صورة 12">
+<img src="https://i.postimg.cc/GmTtsKRt/IMG-3053.jpg" alt="صورة 13">
+<img src="https://i.postimg.cc/QtmdrnQ4/4a27d74f-220e-44c6-83d7-2db0c9cd68fb.jpg" alt="صورة 14">
+<img src="https://i.postimg.cc/wxWjfZT3/9fdfe423-0790-45f1-a1dd-d1615a263dce.jpg" alt="صورة 15">
+<img src="https://i.postimg.cc/nLtF9tTS/0534cf82-062e-4f1f-b241-daeb0fa55446.jpg" alt="صورة 16">
+<img src="https://i.postimg.cc/WbBjxvRp/IMG-3036.jpg" alt="صورة 17">
+<img src="https://i.postimg.cc/j53YcVQb/317290a2-f4df-429e-999f-296e37928082.jpg" alt="صورة 18">
+<img src="https://i.postimg.cc/x1VDt3Hc/97aab430-e8d0-48bc-8d60-fd02d23ac75d.jpg" alt="صورة 19">
+<img src="https://i.postimg.cc/K80Rn39d/IMG-3067.webp" alt="صورة 20">
+ 
 </div>
 
 <!-- قسم صور الكنب -->
