--- a/index.html
+++ b/index.html
@@ -619,7 +619,99 @@
     transform: scale(1.2);
   }
 </style>
+
+ <!-- تأجير كوش افراح تاجير طاولات استقبال -->
+  <section id="tables-chairs" class="service">
+    <h2>تأجير كوش افراح تاجير طاولات استقبال تاجير طاولات كوكتيل</h2>
+    <div class="images-container">
+<img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
+    </div>
+     <!-- زر معرض الصور -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="gallery.html" 
+     style="display: inline-block; padding: 15px 30px; font-size: 22px; font-weight: bold; 
+            background-color: #ff6600; color: #fff; border-radius: 10px; text-decoration: none;">
+    📸 معرض صور خدماتنا
+  </a>
+</div>
+    <p class="content">
+    استمتع بتجربة استئجار طكوش افراح وطاولات استقبال عالية الجودة. نحن نوفر كوش افراح ومدخل استقبال وطاولات كوكتيل حفلات ومناسبات للايجار، بالإضافة إلى تاجير كنب ولوازم حفلات متنوعة. احجز كوش وطالاوت استقبال وطاولات كوكتيل و مناسبات القادمة بسهولة وبأسعار مناسبة
+تاجير كوش 
+تاجير كوش الخبر 
+تاجير كوش جدة 
+تاجير كوش الدمام 
+تاجير كوش الرياض 
+تاجير طاولات كوكتيل 
+تاجير طاولات كوكتيل جدة 
+تاجير طاولات كوكتيل الرياض 
+تاجير طاولات كوكتيل الدمام 
+تاجير كوش أفراح 
+تاجير كوش أفراح جدة 
+تاجير كوش أفراح الرياض 
+تاجير كوش افراح الدمام 
+تاجير طاولات استقبال جدة 
+تاجير طاولات اسقبال الرياض 
+تاجير طاولات استقبال 
+تاجير طاولات استقبال الدمام 
+تاجير مداخل افراح 
+تاجير مداخل افراح الدمام 
+تاجير مداخل افراح الرياض 
+تاجير مداخل افراح الخبر 
+تاجير مداخل افراح جدة 
+كوش افراح للايجار 
+كوش افراح 
+كوش للايجار 
+كوش 
+طاولات كوكتيل 
+طاولات كوكتيل للايجار 
+طاولات استقبال 
+طاولات استقبال للايجار 
+كوش افراح جدة 
+كوش افراح الدمام 
+مداخل افراح جدة 
+مداخل افراح الدمام 
+طاولات استقبال جدة 
+طاولات استقبال الدمام 
+طاولات استقبال الرياض
+تاجير مداخل استقبال 
+تاجير مداخل استقبال جدة 
+تاجير مداخل استقبال الرياض 
+تاجير مداخل استقبال الدمام
+    </p>
   
+ <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
+  <!-- زر واتساب -->
+  <a href="https://wa.me/966559534118" target="_blank" aria-label="واتساب" style="display: inline-block; margin: 10px;">
+    <img 
+      src="https://cdn-icons-png.flaticon.com/512/733/733585.png" 
+      alt="واتساب" 
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
+    />
+  </a>
+
+  <!-- زر اتصال -->
+  <a href="tel:0559534118" aria-label="اتصال مباشر" style="display: inline-block; margin: 10px;">
+    <img 
+      src="https://cdn-icons-png.flaticon.com/512/597/597177.png" 
+      alt="اتصال" 
+      width="60" 
+      height="60" 
+      style="cursor: pointer;" 
+    />
+  </a>
+</div>
+
+<style>
+  .contact-buttons a img {
+    transition: transform 0.3s ease;
+  }
+  .contact-buttons a:hover img {
+    transform: scale(1.2);
+  }
+</style>
+    
   <!-- تأجير مكبرات صوت -->
   <section id="samaat" class="service">
     <h2>تأجير مكبرات صوت وسماعات دي جي بأحدث التقنيات</h2>
