--- a/index.html
+++ b/index.html
@@ -759,6 +759,47 @@
 تاجير دفايات الدمام 
 تاجير دفايات الخبر 
 تاجير دفايات 
+تاجير كوش 
+تاجير كوش الخبر 
+تاجير كوش جدة 
+تاجير كوش الدمام 
+تاجير كوش الرياض 
+تاجير طاولات كوكتيل 
+تاجير طاولات كوكتيل جدة 
+تاجير طاولات كوكتيل الرياض 
+تاجير طاولات كوكتيل الدمام 
+تاجير كوش أفراح 
+تاجير كوش أفراح جدة 
+تاجير كوش أفراح الرياض 
+تاجير كوش افراح الدمام 
+تاجير طاولات استقبال جدة 
+تاجير طاولات اسقبال الرياض 
+تاجير طاولات استقبال 
+تاجير طاولات استقبال الدمام 
+تاجير مداخل افراح 
+تاجير مداخل افراح الدمام 
+تاجير مداخل افراح الرياض 
+تاجير مداخل افراح الخبر 
+تاجير مداخل افراح جدة 
+كوش افراح للايجار 
+كوش افراح 
+كوش للايجار 
+كوش 
+طاولات كوكتيل 
+طاولات كوكتيل للايجار 
+طاولات استقبال 
+طاولات استقبال للايجار 
+كوش افراح جدة 
+كوش افراح الدمام 
+مداخل افراح جدة 
+مداخل افراح الدمام 
+طاولات استقبال جدة 
+طاولات استقبال الدمام 
+طاولات استقبال الرياض
+تاجير مداخل استقبال 
+تاجير مداخل استقبال جدة 
+تاجير مداخل استقبال الرياض 
+تاجير مداخل استقبال الدمام
 دفايات الرياض 
 دفايات الدمام 
 دفايات الخبر 
