--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
   <section id="tables-chairs" class="service">
     <h2>تأجير كوش افراح تاجير طاولات استقبال تاجير طاولات كوكتيل</h2>
     <div class="images-container">
-<img src="https://i.postimg.cc/v8qHTgCH/b5bd6e6a-bf35-4b58-98f2-658038b580fc.jpg" alt="" />
+<img src="https://i.postimg.cc/d0QfxH0t/IMG-3066.jpg" alt="صورة 1">
     </div>
      <!-- زر معرض الصور -->
 <div style="text-align: center; margin: 40px 0;">
@@ -635,7 +635,7 @@
   </a>
 </div>
     <p class="content">
-    استمتع بتجربة استئجار طكوش افراح وطاولات استقبال عالية الجودة. نحن نوفر كوش افراح ومدخل استقبال وطاولات كوكتيل حفلات ومناسبات للايجار، بالإضافة إلى تاجير كنب ولوازم حفلات متنوعة. احجز كوش وطالاوت استقبال وطاولات كوكتيل و مناسبات القادمة بسهولة وبأسعار مناسبة
+    استمتع بتجربة استئجار كوش افراح وطاولات استقبال عالية الجودة. نحن نوفر كوش افراح ومدخل استقبال وطاولات كوكتيل حفلات ومناسبات للايجار، بالإضافة إلى تاجير كنب ولوازم حفلات متنوعة. احجز كوش وطالاوت استقبال وطاولات كوكتيل و مناسبات القادمة بسهولة وبأسعار مناسبة
 تاجير كوش 
 تاجير كوش الخبر 
 تاجير كوش جدة 
