--- a/gallery.html
+++ b/gallery.html
@@ -168,10 +168,20 @@
 <!-- قسم صور الجلسات -->
 <h2>صور جلسات شعبية ومغربية</h2>
 <div class="gallery">
-  <img src="https://i.postimg.cc/abc1.jpg" alt="كرسي1">
-  <img src="https://i.postimg.cc/abc2.jpg" alt="كرسي2">
-  <img src="https://i.postimg.cc/abc3.jpg" alt="كرسي3">
-  <img src="https://i.postimg.cc/abc4.jpg" alt="كرسي4">
+  <img src="https://i.postimg.cc/HkY15sYN/IMG-3033.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/2jhsKB3J/60f2dedd-5c0b-4266-8952-2b59a1af5413.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/RVTjM57L/IMG-3034.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/MpPNQ7rc/91cfa35a-fc3b-4a3e-bef3-a0c4ea3eef9c.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/ZqWgFW1w/4cc93a4e-f758-438c-a304-6fb631e6abd7.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/7LjRBx4w/ceefc928-410c-4eb8-a618-1e389bfc759d.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/qqT5TjgF/9ba4cf80-fdd9-4fad-9598-43ec5083b528.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/v8rKzFNw/5a236267-8b38-4648-985c-e18afd4690a5.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/WbsHYWBF/IMG-2900.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/x1CFnkT9/7789137a-1059-428e-bbac-5d2656e86e39.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/T34NwRpg/49c03e62-1054-4cad-8ea6-7fb48acfaa7f.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/vTb3jTNF/86cbdc69-021d-4387-bcb4-7b1d3367bd8f.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/QNJ67gFX/ff82e887-7bfc-412a-8f00-ba8ac8af9e39.jpg" alt="صورة" />
+    <img src="https://i.postimg.cc/7ZdX4mWN/3b304877-a3d0-4908-a34f-c0dbcc761b49.jpg" alt="صورة" /> 
 </div>
 
 <!-- قسم صور الخيام -->
